Fix terminal horizontal scrollbar and scrollbar corner

--- a/style.css
+++ b/style.css
@@ -295,12 +295,16 @@ body{
     &::-webkit-scrollbar{
       appearance: none;
       width: 5px;
+      height: 5px;
       /* background-color: rgba(0 0 0 / .3); */
       border-radius: 5px;
     }
     &::-webkit-scrollbar-thumb{
       background-color: rgba(255 255 255 / .7);
       border-radius: 5px;
+    }
+    &::-webkit-scrollbar-corner{
+      background-color: transparent;
     }
     .input-bar{
       display: flex;
